compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__fault_tolerant_list_tail.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  [1, \"a\", ..[\"a\", \"b\"]]\n}\n"
---
----- SOURCE CODE

pub fn main() {
  [1, "a", ..["a", "b"]]
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:7
  │
3 │   [1, "a", ..["a", "b"]]
  │       ^^^

All elements of a list must be the same type, but this one doesn't
match the one before it.

Expected type:

    Int

Found type:

    String

error: Type mismatch
  ┌─ /src/one/two.gleam:3:14
  │
3 │   [1, "a", ..["a", "b"]]
  │              ^^^^^^^^^^

All elements in a list must have the same type, but the elements of
this list don't match the type of the elements being prepended to it.

Expected type:

    List(Int)

Found type:

    List(String)
